added js for show users on game_session

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,3 @@
-<%= form_for(@user) do |u| %>
-<%= u.label :first_name%>
-<%= u.text_field :first_name %>
-<%= u.label :game_session_id %>
-<%= u.text_field :game_session_id %>
-<%= u.submit %>
-<%= end %>
+<% @users.each do |u| %>
+<%= u.first_name %>
+<% end %>
